RESOLVED FIXED299401
ASSERTION FAILED: checkedPtrCountWithoutThreadCheck() in SQLiteStorageArea::prepareDatabase
https://bugs.webkit.org/show_bug.cgi?id=299401
Summary ASSERTION FAILED: checkedPtrCountWithoutThreadCheck() in SQLiteStorageArea::p...
Sihui Liu
Reported 2025-09-23 15:54:08 PDT
...
Attachments
Sihui Liu
Comment 1 2025-09-23 15:54:28 PDT Comment hidden (obsolete)
Sihui Liu
Comment 2 2025-09-23 15:55:19 PDT
Sihui Liu
Comment 3 2025-09-23 16:05:45 PDT
EWS
Comment 4 2025-09-23 17:05:14 PDT
Committed 300436@main (a0ee38482c93): <https://commits.webkit.org/300436@main> Reviewed commits have been landed. Closing PR #51220 and removing active labels.
EWS
Comment 5 2025-09-24 06:43:52 PDT
Committed 297297.463@safari-7622-branch (73d7f0f2d68f): <https://commits.webkit.org/297297.463@safari-7622-branch> Reviewed commits have been landed. Closing PR #3698 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.