ASSERTION FAILED: checkedPtrCountWithoutThreadCheck() in SQLiteStorageArea::prepareDatabase https://bugs.webkit.org/show_bug.cgi?id=299401 rdar://160871229

Reviewed by Ryosuke Niwa.

m_database can be set to null if error occurs, so we should not use CheckedRef for it.

* Source/WebKit/NetworkProcess/storage/SQLiteStorageArea.cpp:
(WebKit::SQLiteStorageArea::prepareDatabase):

Canonical link: https://commits.webkit.org/300436@main